--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
+    "@tanstack/query-core": "^5.90.2",
+    "@tanstack/react-query": "^5.90.2",
+    "@xyflow/react": "^12.8.6",
     "axios": "^1.12.2",
     "next": "15.5.4",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "rete": "^2.0.6",
@@ -24,13 +28,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5"
   }
 }
