--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,97 @@
+ansicon==1.89.0
+argcomplete==3.6.2
+asttokens==3.0.0
+attrs==25.3.0
+aws-cdk-lib==2.203.0
+aws-cdk.asset-awscli-v1==2.2.242
+aws-cdk.asset-kubectl-v20==2.1.4
+aws-cdk.asset-node-proxy-agent-v6==2.1.0
+aws-cdk.cloud-assembly-schema==44.9.0
+awsebcli==3.23.3
+blessed==1.21.0
 blinker==1.9.0
+boto3==1.35.97
+botocore==1.35.99
+cachetools==5.5.2
+cattrs==24.1.3
+cement==2.10.14
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.3.0
+clr_loader==0.2.7.post0
 colorama==0.4.6
+colorlog==6.9.0
+comm==0.2.2
+constructs==10.4.2
+debugpy==1.8.14
+decorator==5.2.1
+dependency-groups==1.3.1
+distlib==0.3.9
+envs==1.4
+executing==2.2.0
+extend-me==1.1.5
+filelock==3.18.0
 Flask==3.1.2
 flask-cors==6.0.1
+future==1.0.0
+idna==3.10
+importlib_resources==6.5.2
+inquirerpy==0.3.4
+ipykernel==6.29.5
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
 itsdangerous==2.2.0
+jedi==0.19.2
 Jinja2==3.1.6
+jinxed==1.3.0
+jmespath==1.0.1
+jsii==1.112.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 MarkupSafe==3.0.3
+marshmallow==3.25.1
+matplotlib-inline==0.1.7
+neo4j==6.0.1
+nest-asyncio==1.6.0
+nox==2025.5.1
+numpy==2.2.5
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+passlib==1.7.4
+pathspec==0.12.1
+pfzy==0.3.4
+prompt_toolkit==3.0.51
+psutil==7.0.0
+publication==0.0.3
+pure_eval==0.2.3
+pyarrow==19.0.0
+pycognito==2024.5.1
+Pygments==2.19.1
+PyJWT==2.10.1
+pypiwin32==223
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pywin32==310
+PyYAML==6.0.2
+pyzmq==26.4.0
+regex==2024.11.6
+ruff==0.9.5
+s3transfer==0.10.4
+semantic-version==2.10.0
 setuptools==80.9.0
+simplejson==3.20.1
+six==1.17.0
+stack-data==0.6.3
+termcolor==2.5.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+typeguard==2.13.3
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+virtualenv==20.31.2
+wcwidth==0.2.13
 Werkzeug==3.1.3
 wheel==0.45.1
